...
                        <viewControllerLayoutGuide type="bottom" id="zLi-fC-klF"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ehK-mm-YMO">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HomeScreen" translatesAutoresizingMaskIntoConstraints="NO" id="HJM-WJ-CmD">
                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                            </imageView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstAttribute="trailingMargin" secondItem="HJM-WJ-CmD" secondAttribute="trailing" constant="-20" id="Pst-jh-cCo"/>
...
                                <constraints>
                                    <constraint firstItem="kXV-3f-Oic" firstAttribute="centerX" secondItem="m73-kP-8xZ" secondAttribute="centerX" id="2PQ-8U-LDl"/>
                                    <constraint firstAttribute="height" constant="242" id="gNj-Mb-2mP"/>
                                    <constraint firstItem="kXV-3f-Oic" firstAttribute="top" secondItem="m73-kP-8xZ" secondAttribute="topMargin" constant="10" id="pJD-MQ-fVN"/>
                                </constraints>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oKF-HP-gj1" customClass="GIDSignInButton" colorLabel="IBBuiltInLabel-Red">
                                <rect key="frame" x="90" y="330" width="234" height="77"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="77" id="7gh-Se-kvt"/>
                                </constraints>
                                <connections>
                                    <action selector="didTapSignIn:" destination="BYZ-38-t0r" eventType="valueChanged" id="yPb-yh-NCq"/>
...
                        <connections>
                            <outlet property="dataSource" destination="lJO-VR-Rmz" id="m6z-HO-tZg"/>
                            <outlet property="delegate" destination="lJO-VR-Rmz" id="W5o-jt-HFs"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Item" id="SfN-Kw-ofz"/>
                    <navigationItem key="navigationItem" title="JOBS" id="6yC-DE-rKq"/>
                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="e5L-Hb-bxi">
                        <autoresizingMask key="autoresizingMask"/>
                    </refreshControl>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="jw2-GL-1S7" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="652" y="237"/>
        </scene>
        <!--Detail-->
        <scene sceneID="2DH-NY-42W">
            <objects>
                <viewController storyboardIdentifier="DetailViewController" title="Detail" useStoryboardIdentifierAsRestorationIdentifier="YES" id="YYT-gB-jnr" customClass="DetailViewController" customModule="Autobot" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="cvK-m2-n4U"/>
                        <viewControllerLayoutGuide type="bottom" id="PEy-78-0Al"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="nZi-av-Kgn">
                        <rect key="frame" x="0.0" y="64" width="414" height="672"/>
...
                                <rect key="frame" x="20" y="325" width="62" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="4bN-pz-Zzu"/>
                                    <constraint firstAttribute="width" constant="62" id="Rm4-za-0BZ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Reports"/>
                                <connections>
                                    <action selector="clickReports:" destination="YYT-gB-jnr" eventType="touchUpInside" id="zc7-im-sxS"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2cB-71-f3V">
                                <rect key="frame" x="179" y="266" width="56" height="56"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nBv-Br-xFm">
                                <rect key="frame" x="158" y="551" width="99" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="99" id="gqd-YB-gf8"/>
                                    <constraint firstAttribute="height" constant="30" id="jle-7L-kDW"/>
                                </constraints>
                                <state key="normal" title="SignOut"/>
                                <connections>
                                    <action selector="didTapSignOut:" destination="ytq-zs-xX3" eventType="touchUpInside" id="Wzm-Tw-UwV"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gtr-Uc-1q6">
                                <rect key="frame" x="20" y="522" width="374" height="21"/>
...
