...
    }
    func configureSearchController(){
        searchController = UISearchController(searchResultsController: nil)
        self.extendedLayoutIncludesOpaqueBars = true
        searchController.searchResultsUpdater = self
        searchController.dimsBackgroundDuringPresentation = false
        searchController.searchBar.placeholder = "Search a Project"
        searchController.searchBar.delegate = self
        searchController.searchBar.sizeToFit()
        self.definesPresentationContext = true
        tableView.tableHeaderView = searchController.searchBar
        tableView.tableFooterView = UIView(frame: CGRectZero)
        searchController.hidesNavigationBarDuringPresentation = true
...
                break
            case 4 : if failedNumber == 0 {
                cell.runFailedLabel.text = "Success"
                cell.runFailedLabel.textColor = UIColor(netHex:0x5CB85C)
            }
            else{
                cell.runFailedLabel.text = "Failed"
                cell.runFailedLabel.textColor = UIColor(netHex:0xD9534F)
            }
                break
            case 5 : cell.runFailedLabel.text = "Killing"
            cell.runFailedLabel.textColor = UIColor(netHex:0xF0AD4E)
                break
...
